# ga-snake

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  ]  best_genome.npy  ga_train.py  play.py  play_ga.py  prompt.txt  pyproject.toml  train_ga.py
.github/workflows/: test.yml
snake/: __main__.py  const.py  engine.py  renderer.py  state.py  utils.py
